AWS Device Farm support was added.